fixed sizing and spacing for scrolling section both for mobile and web viewing

--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,18 @@ body {
     background-color: #f6f6f6;
 }
 
+.scrolling-header {
+    padding-bottom: 105px;
+}
+
 .scrolling-container .text-title {
     font-family: open sans, sans-serif;
     font-size: 36px;
     font-weight: 600;
     letter-spacing: -1px;
     font-style: normal;
-    padding-bottom: 4px;
+    margin-bottom: 4px;
+
 }
 
 .scrolling-container .text-subtitle {
@@ -92,6 +97,7 @@ body {
     position: relative;
     background-color: transparent;
     background: url('../assets/img/logo-carousel-clients-4.png');
+    background-size: contain;
     animation: scrolling 45s infinite;
     animation-timing-function: linear;
 
@@ -480,7 +486,7 @@ nav div.container {
     }
 }
 
-@media(max-width: 767px) {
+@media(max-width: 768px) {
 
     .intro-container .text-title {
         font-size: 40px;
@@ -497,6 +503,22 @@ nav div.container {
         margin-left: -350% !important;
         margin-top: -140px !important;
         margin-bottom: -275px !important;
+    }
+
+    .scrolling-container {
+        padding:25px 0px 25px 0px;
+    }
+
+    .scrolling-container .text-title {
+        font-size: 30px
+    }
+
+    .scrolling-container .text-subtitle {
+        font-size: 40px
+    }
+
+    .brand-container{
+        height: 75px;
     }
 }
 
